# rust-examples

./: .gitignore  Makefile  README.md
.github/workflows/: test_all.yml
axum-postgres/: .gitignore  README.md  docker-compose.yml
axum-postgres/.github/workflows/: test_all.yml
axum-postgres/app/: Cargo.toml
axum-postgres/app/migrations/: 20241229103554_init_todos_table.sql
axum-postgres/app/src/: config.rs  logger.rs  main.rs  test_utils.rs
axum-postgres/app/src/datasources/database/: memory_db.rs  mod.rs  models.rs  postgres_db.rs
axum-postgres/app/src/server/: errors.rs  mod.rs  openapi.rs  router.rs  routes.rs  server.rs
axum-postgres/app/src/server/domain/: common.rs  errors.rs  mod.rs  todos.rs
axum-postgres/app/src/server/extractors/: auth_basic.rs  mod.rs  request_json.rs
axum-postgres/app/src/server/handlers/: mod.rs  protected.rs  todos_create.rs  todos_delete.rs  todos_list.rs  todos_update.rs
axum-prometheus/: .gitignore  README.md  docker-compose.yml
axum-prometheus/app/: Cargo.toml  Dockerfile
axum-prometheus/app/src/: config.rs  main.rs  metrics.rs  routes.rs
axum-prometheus/grafana/provisioning/dashboards/: rust_app_metrics.json
axum-prometheus/grafana/provisioning/datasources/: datasources.yml
axum-prometheus/prometheus/: prometheus.yml
axum-tictactoe/: Cargo.toml  README.md
axum-tictactoe/src/: game.rs  handlers.rs  main.rs  room.rs  websocket.rs
axum-tictactoe/static/: game.js  index.html  styles.css
