[package]
name = "axum-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
base64 = "0.22.1"
mockall = "0.13.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["add-extension", "request-id", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = { version = "0.11.4", features = [ "postgres" ] }

[lints.clippy]
unwrap_used = "deny"
